--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	 <!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 		<div class="container">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top">THALESCODE</a>
+			<a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: #333;">THALESCODE</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				Menu
 			<i class="fas fa-bars"></i>
@@ -40,41 +40,41 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#home">HOME</a>
+						<a class="nav-link js-scroll-trigger" href="#home" style="color: #333;">HOME</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#training">TRAINING</a>
+						<a class="nav-link js-scroll-trigger" href="#training" style="color: #333;">TRAINING</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#testimonals">TESTIMONALS</a>
+						<a class="nav-link js-scroll-trigger" href="#testimonals" style="color: #333;">TESTIMONALS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#thalescode">THALESBLOG</a>
+						<a class="nav-link js-scroll-trigger" href="#thalescode" style="color: #333;">THALESBLOG</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
+						<a class="nav-link js-scroll-trigger" href="#contact" style="color: #333;">CONTACT</a>
 					</li>
 					</ul>
 			</div>
 		</div>
 	</nav>
-	<header class="masthead" id="home">
+	<header class="masthead" id="home" style="color: #333 !important;">
 			<div class="container h-100">
 				<div class="row h-100">
 					<div class="col-lg-7 my-auto">
 						<div class="header-content mx-auto">
-							<h1>ThalesCode</h1>
+							<h1 style="color: #333 !important">ThalesCode</h1>
 							<h1 class="mb-5  d-none d-lg-block">The best way to learn how to programming online</h1>
-							<h1 class="mb-5  d-xl-none d-lg-block">The best way to learn IT</h1>
-							<a href="#" class="btn btn-outline btn-xl js-scroll-trigger">DEVELOPERS</a>
-							<a href="#" class="btn btn-outline btn-xl js-scroll-trigger">COMPANIES</a>
+							<h1 class="mb-5  d-xl-none d-lg-block" style="color: #333;">The best way to learn IT</h1>
+							<a href="#" class="btn btn-outline btn-xl js-scroll-trigger" style="background-color: #333 !important;color: #fff;">DEVELOPERS</a>
+							<a href="#" class="btn btn-outline btn-xl js-scroll-trigger" style="background-color: #333 !important;color: #fff;">COMPANIES</a>
 						</div>
-						<div class ="d-none d-lg-block" style="background-color:#fff;color:black;border: 3px solid #333;padding: 30px;margin-top: 50px;border-radius: 1.5em;">
+						<div class ="d-none d-lg-block" style="background-color:#fff !important;color:#333;border: 3px solid #333;padding: 30px;margin-top: 50px;border-radius: 1.5em;">
 							<p>A semantic element clearly describes its meaning to both the browser and the developer.A semantic element clearly describes its meaning to both the browser and the developer.A semantic element clearly describes its meaning to both the browser and the developer. </p>
 						</div>
 					</div>
 					<div class="col-lg-5 my-auto">
-						<img src='img/home2.jpg' class="rounded-circle img-fluid">
+						<img src='img/home.jpg' class="rounded-circle img-fluid">
 					</div>
 				</div>
 			</div>
@@ -168,7 +168,7 @@
 				</div>
 				<div class="col-lg-5 my-auto">
 					<div class="device-container">
-						<img src='img/cat.jpg' class="rounded-circle">
+						<img src='img/home2.PNG' class="rounded-circle">
 					</div>
 				</div>
 			</div>
@@ -300,7 +300,7 @@
 			<div class="row">
 				<div class="col-md-7">
 					<div class="box1">
-						<img class="img-responsive" src="img/photo2.jpg">
+						<img class="img-responsive" src="img/home3.jpg">
 						<div class="ui large header">
 						A step-by-step guide to getting started with HTML forms
 						</div>
@@ -325,7 +325,7 @@
 				<div class="d-xl-none d-lg-block" style="height: 100%;border-style: 1px solid red;">.</div>
 				<div class="col-md-5">
 					<div class="box2">
-						<img class="img-responsive" src="img/bg-pattern.png">
+						<img class="img-responsive" src="img/home4.jpg">
 						<div class="ui small header">
 						These common mistakes will lead to immortal bugs.Learn how to avoid them.
 						</div>
@@ -353,7 +353,7 @@
 			<div class="row">
 				<div class="col-md-5">
 					<div class="box2">
-						<img class="img-responsive" src="img/photo2.jpg">
+						<img class="img-responsive" src="img/home5.jpg">
 						<div class="ui small header">
 						How not to be afraid of GIT anymore
 						</div>
@@ -378,7 +378,7 @@
 				<div class="d-xl-none d-lg-block" style="height: 100%;border-style: 1px solid red;">.</div>
 				<div class="col-md-7">
 					<div class="box1">
-						<img class="img-responsive" src="img/bg-pattern.png">
+						<img class="img-responsive" src="img/home6.jpg">
 						<div class="ui large header">
 							How to build data science project from scratch 
 						</div>
@@ -447,7 +447,7 @@
 			</div>
 		</div>
 	</section>
-	<div class="mapouter"><div><iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=bagan&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a></div><style>.mapouter{text-align:right;height:500px}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1080px;}</style></div> 
+	<div class="mapouter"><div><iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Meguro-ku&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a></div><style>.mapouter{text-align:right;height:500px}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1080px;}</style></div> 
 
 	<!-- Footer -->
 		
