put text over images

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	 <!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 		<div class="container">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: #333;">THALESCODE</a>
+			<a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: #333;"><span style="color: #17a2b8;">THALES</span>CODE</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				Menu
 			<i class="fas fa-bars"></i>
@@ -58,6 +58,8 @@
 			</div>
 		</div>
 	</nav>
+
+	<!-- header -->
 	<header class="masthead" id="home" style="color: #333 !important;">
 			<div class="container h-100">
 				<div class="row h-100">
@@ -80,6 +82,7 @@
 			</div>
 	</header>
 
+	<!-- Only mobile view for About -->
 	<div class="my-auto d-xl-none d-lg-block" style="padding-top: 30px !important;">
 		<div class="container">
 			<div class="row h-100">
@@ -101,6 +104,7 @@
 		</div>
 	</div>
 
+	<!-- Latest Jobs -->
 	<section> 
 		<div class="container">
 			<h1 id="latest-job"><strong>Latest Jobs</strong></h1>
@@ -150,6 +154,8 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Only PC view for this part -->
 	<section class="d-none d-lg-block" id="training">
 		<hr style="border-bottom:1px solid #ccc;max-width: 100%"/><br><br>
 		<div class="container  h-100">
@@ -174,6 +180,8 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- PC view for this part -->
 	<section class="features" id="testimonals">
 		<hr style="border-bottom:1px solid #ccc;max-width: 100%"/>
 		<div class="container">
@@ -226,7 +234,7 @@
 		</div>
 	</session>
 
-	<!-- for mobile -->
+	<!-- Mobile view for this part -->
 	<div class="d-xl-none d-lg-block slide" style="background-color: #2faff5b3;">
 		<h3 style="padding-left: 10px;">Services</h3>
 		<h1 style="padding-left: 10px;color: #333;">Why they <br>Choose Motivo?</h1>
@@ -282,6 +290,8 @@
 	</div>	
 
 	<hr style="border-bottom:1px solid #ccc;max-width: 100%"/>
+
+	<!-- ThalesCode Blog part -->
 	<section id="thalescode">
 		<div class="ui container">
 			<div class="ui huge header">
@@ -301,6 +311,7 @@
 				<div class="col-md-7">
 					<div class="box1">
 						<img class="img-responsive" src="img/home3.jpg">
+						<div class="centered"><h1 style="margin-left: 37px !important;">_</h1><h4>#TECHNOLOGY</h4><h3>2018.11.30</h3></div>
 						<div class="ui large header">
 						A step-by-step guide to getting started with HTML forms
 						</div>
@@ -326,6 +337,7 @@
 				<div class="col-md-5">
 					<div class="box2">
 						<img class="img-responsive" src="img/home4.jpg">
+						<div class="centered"><h1 style="margin-left: 37px !important;">_</h1><h4>#TOKYOTECH</h4><h3>2018.11.30</h3></div>
 						<div class="ui small header">
 						These common mistakes will lead to immortal bugs.Learn how to avoid them.
 						</div>
@@ -354,6 +366,7 @@
 				<div class="col-md-5">
 					<div class="box2">
 						<img class="img-responsive" src="img/home5.jpg">
+						<div class="centered"><h1 style="margin-left: 37px !important;">_</h1><h4>#TOKYOTECH</h4><h3>2018.11.30</h3></div>
 						<div class="ui small header">
 						How not to be afraid of GIT anymore
 						</div>
@@ -379,6 +392,7 @@
 				<div class="col-md-7">
 					<div class="box1">
 						<img class="img-responsive" src="img/home6.jpg">
+						<div class="centered"><h1 style="margin-left: 37px !important;">_</h1><h4>#TOKYOTECH</h4><h3>2018.11.30</h3></div>
 						<div class="ui large header">
 							How to build data science project from scratch 
 						</div>
@@ -405,6 +419,8 @@
 	</section>
 		
 	<hr style="border-bottom:1px solid #ccc;max-width: 100%"/>
+
+	<!-- Contact form -->
 	<section id="contact">
 		<div class="container">
 			<div class="row">
@@ -447,10 +463,11 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Google Map -->
 	<div class="mapouter"><div><iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Meguro-ku&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a></div><style>.mapouter{text-align:right;height:500px}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1080px;}</style></div> 
 
 	<!-- Footer -->
-		
 	<div class="footer" id="footer">
 		<div class="container">
 			<hr style="border-bottom:1px solid #ccc;max-width: 100%"/>
@@ -492,6 +509,3 @@
 	</div>
 </body>
 </html>
-<style type="text/css">
-
-</style>
