--- a/index.html
+++ b/index.html
@@ -70,14 +70,19 @@
 							<h1 style="color: #333 !important">ThalesCode</h1>
 							<h1 class="mb-5  d-none d-lg-block">The best way to learn how to programming online</h1>
 							<h1 class="mb-5  d-xl-none d-lg-block" style="color: #333;">The best way to learn IT</h1>
-							<a href="#" class="btn btn-outline btn-xl js-scroll-trigger" style="background-color: #333 !important;color: #fff;">DEVELOPERS</a>
-							<a href="#" class="btn btn-outline btn-xl js-scroll-trigger" style="background-color: #333 !important;color: #fff;">COMPANIES</a>
+							<div class="row">
+								<div class="col-6"><a href="#" class="d-none d-xl-block btn  btn-xl js-scroll-trigger" style="background-color: #333 !important;color: #fff;">DEVELOPERS</a></div>
+								<div class="col-6"><a href="#" class="d-none d-xl-block btn  btn-xl js-scroll-trigger " style="background-color: #333 !important;color: #fff;">COMPANIES</a></div>
+							</div>
+							<p class="d-xl-none d-lg-block" style="text-align: left;color: #fff;margin-top: 74%;margin-left: 10%;">DEVELOPERS</p>
+							<p class="d-xl-none d-lg-block" style="text-align: left;color: #fff;margin-top: 12%;margin-left: 25%;">COMPANIES</p>
 						</div>
-						<div class ="d-none d-lg-block" style="background-color:#fff !important;color:#333;border: 3px solid #333;padding: 30px;margin-top: 50px;border-radius: 1.5em;">
+						<div class ="d-none d-lg-block" style="background-color:#fff !important;color:#333;padding: 30px;margin-top: 50px;">
 							<p>A semantic element clearly describes its meaning to both the browser and the developer.A semantic element clearly describes its meaning to both the browser and the developer.A semantic element clearly describes its meaning to both the browser and the developer. </p>
 						</div>
 					</div>
-					<div class="col-lg-5 my-auto">
+					 <!-- PC view -->
+					<div class="col-lg-5 my-auto d-none d-lg-block">
 						<img src='img/home.jpg' class="rounded-circle img-fluid">
 					</div>
 				</div>
@@ -90,9 +95,17 @@
 			<div class="row h-100">
 				<div class="col-lg-7 ">
 					<div class="col-lg-2 mx-auto">
-						<h3>About</h3>
-						<h5 class="mb-2  d-xl-none d-lg-block">The Next Recruitment Generation</h5>
-						<a class ="btn" data-toggle="collapse" href="#moreText" style="background-color: #fff ;color: #333;border: 1px solid #333;margin-bottom: 10px;">Read More</a>
+						<h3 class="mb_header">About</h3>
+						<h2 class="mb-2  d-xl-none d-lg-block">The Next Recruitment Generation</h2>
+						<div class="row justify-content-between">
+							<div class=	col-sm-8"></div>
+							<div class="col-sm-2 col-xs-6 col-xs-offset-2">
+								<button class="ui basic button">
+									Find More
+									<i class="angle double right icon"></i>
+								</button>
+							</div>
+						</div><br>
 					</div>
 				</div>
 				<div class="col-lg-7" >
@@ -108,11 +121,12 @@
 
 	<!-- Latest Jobs -->
 	<section> 
-		<div class="container">
+		<div class="container"><br>
+			<h3 class="mb_header">JOB POST</h3>
 			<h1 id="latest-job"><strong>Latest Jobs</strong></h1>
 			<h6 id="job-post" >MOTIVO JOB POSTS</h6><br>
 			<div class="row justify-content-between">
-				<div class="col-sm-8"></div>
+				<div class=	col-sm-8"></div>
 				<div class="col-sm-2 col-xs-6 col-xs-offset-2">
 					<button class="ui basic button">
 						Find More
@@ -127,6 +141,7 @@
 						<h6>6.000.000 - 8.000.000万円</h6>
 						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. </p>
 						<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+						<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,.</span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo</span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">-10/30</span>
 					</div>
 				</div>
 				<div class="card ">
@@ -135,6 +150,7 @@
 						 <h6>6.000.000 - 8.000.000万円</h6>
 						<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
 						<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+						<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,.</span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo</span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">-10/30</span>
 					</div>
 				</div>
 				<div class="card">
@@ -143,6 +159,7 @@
 						 <h6>6.000.000 - 8.000.000万円</h6>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
 						<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+						<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,.</span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo</span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">-10/30</span>
 					</div>
 				</div>
 				<div class="card">
@@ -151,6 +168,7 @@
 						 <h6>6.000.000 - 8.000.000万円</h6>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
 						<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+						<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,.</span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo</span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">-10/30</span>
 					</div>
 				</div>
 			</div>
@@ -162,7 +180,7 @@
 		<hr style="border-bottom:1px solid #ccc;max-width: 100%"/><br><br>
 		<div class="container  h-100">
 			<div class="row h-100">
-				<div class="col-lg-7 my-auto">
+				<div class="col-lg-4 my-auto">
 					<div class="header-content mx-auto">
 						<b>___</b>
 						<h1 class="card-title">Get where you're going faster with ThalesCode</h1>
@@ -174,9 +192,9 @@
 						<p><a class ="btn" data-toggle="collapse" href="#moreText" style="background-color: #fff ;color: #333;border: 1px solid #333;">Read More</a></p>
 					</div>
 				</div>
-				<div class="col-lg-5 my-auto">
+				<div class="col-lg-8 my-auto">
 					<div class="device-container">
-						<img src='img/home2.PNG' class="rounded-circle">
+						<img src='img/home2.PNG' class="rounded-circle" align="right">
 					</div>
 				</div>
 			</div>
@@ -191,7 +209,7 @@
 				<div class="triangle1"></div>
 				<div class="triangle2"></div>
 				<div class="triangle3"></div>
-				<h1 style="text-align: center;"><strong>Why to choose Thales Code</strong></h1>
+				<h1 class="card-title" style="text-align: center;">Why to choose Thales Code</h1>
 				<div class="small-header">WHY DEVELOPERS CHOOSE US</div>
 				<div class="row">
 					<div class="col-sm-3"></div>
@@ -237,45 +255,45 @@
 	</session>
 
 	<!-- Mobile view for this part -->
-	<div class="d-xl-none d-lg-block slide" style="background-color: #2faff5b3;">
-		<h3 style="padding-left: 10px;">Services</h3>
-		<h1 style="padding-left: 10px;color: #333;">Why they <br>Choose Motivo?</h1>
-			<button type="button" class="btn btn-default find-btn" style="background-color: #333 !important;">
+	<div class="d-xl-none d-lg-block slide" style="background: linear-gradient(to bottom right, #33ccff 0%, #b791a4 100%);padding: 16px;">
+		<h3 style="padding-left: 10px;color: #fff;">Services</h3>
+		<h1 style="padding-left: 10px;color: #fff;">Why they <br>Choose ThalesCode?</h1>
+			<button type="button" class="btn btn-default find-btn" style="border: 1px solid #fff;color: #fff;">
 				<span class="btn-text">Find More</span>
 				<span class="glyphicon glyphicon-chevron-right"></span>
 			</button>
 			<div class="row" style="color: red;text-align: center;margin-left: 102px;w">
 				<div class="col-xs-3"></div>
 				<div class="col-xs-3 "><h3 style="color: #fff;">Employers</h3></div>
-				<div class="col-xs-3 "><h3 style="color: #fff;">Candidates</h3></div>
+				<div class="col-xs-3 "><h3 style="color: #8C93AA;">Candidates</h3></div>
 				<div class="col-xs-3"></div>
 			</div>
 
-		  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="border: 1px solid #333;padding: 10px;margin: 20px;color: #333;">
-	  			<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="background-color:#FFF;padding:10px;margin: 20px;color: #333;">
+	  			<ol class="carousel-indicators" >
+					<li data-target="#myCarousel" data-slide-to="0" class="active" ></li>
 					<li data-target="#myCarousel" data-slide-to="1"></li>
 					<li data-target="#myCarousel" data-slide-to="2"></li>
 					<li data-target="#myCarousel" data-slide-to="3"></li>
 				</ol>
 		  		<div class="carousel-inner" style="text-align: center;">
 					<div class="carousel-item active">
-						<h2>01</h2>
+						<h3 style="color: #2CA1F8;">01</h3>
 						<h3>IT Training</h3>
 						<p>Our team includes people who specialize in IT development and product development services who have the experience and knowledge to understand what our clients need.</p>
 					</div>
 					<div class="carousel-item">
-  						<h2>02</h2>
+  						<h3 style="color: #2CA1F8;">02</h3>
 						<h3>Global Recruitment</h3>
 						<p>We focuses on recruit high skilled engineers with knowledge and experience from all around the world, providing qualify candidates who are ready to create innovating solutions for businesses.</p>
 					</div>
 					<div class="carousel-item">
-						<h2>03</h2>
+						<h3 style="color: #2CA1F8;">03</h3>
 						<h3>HR-HRBP</h3>
 						<p>Due to our understanding of technologies, our recruiters not only provide candidates to companies but also consulting on how to structure teams to create a flexible working environment between Japanese and foreigner engineers.</p>
 					</div>
 					<div class="carousel-item">
- 						<h2>04</h2>
+ 						<h3 style="color: #2CA1F8;">04</h3>
 						<h3>LifeCare Support</h3>
 						<p>Motivo provides a full relocating package support for candidates who are coming from abroad, taking care from their VISAS support, allocation, life setup and incorporate themselves into Japanese culture and community.</p>
 					</div>
@@ -296,18 +314,12 @@
 	<!-- ThalesCode Blog part -->
 	<section id="thalescode">
 		<div class="ui container">
-			<div class="ui huge header">
+			<div class="ui huge">
 				<h1>ThalesCode Blog</h1>
-				<div class="d-xl-none d-lg-block slide" style="padding-bottom: 20px;">ThalesCode Blog</div>
-				<h6 style="color:#AAAFB1;">LEARN MORE ABOUT LATEST TECHNOLOGIES</h6>
+				<div class="d-xl-none d-lg-block" style="font-size: 25px;">ThalesCode Blog</div><br>
+				<h6 class="d-none d-lg-block" style="color:#AAAFB1;">LEARN MORE ABOUT LATEST TECHNOLOGIES</h6>
 			</div>
-
-			<div class="button">
-			<button class="ui basic button">
-				Find More
-				<i class="angle double right icon"></i>
-			</button>
-			</div>
+			<a href=""><h4>READ MORE ></h4></a>
 			<br>
 			<div class="row">
 				<div class="col-md-7">
@@ -473,40 +485,39 @@
 	<div class="footer" id="footer">
 		<div class="container">
 			<hr style="border-bottom:1px solid #ccc;max-width: 100%"/>
-			<div class="row">
-					<div class="col-lg-2  col-md-2 col-sm-4 col-xs-3">
-						<h3> INFORMATION </h3>
+			 <div class="row">
+			    <div class="col">
+			      <h3> INFORMATION </h3>
 						<ul>
-								<li> <a href="#"> About us </a> </li>
-								<li> <a href="#"> Companies </a> </li>
-								<li> <a href="#"> Candidates </a> </li>
-								<li> <a href="#"> Internships </a> </li>
-								<li> <a href="#"> Blogs </a> </li>
-								<li> <a href="#"> Testimonials </a> </li>
+							<li> <a href="#"> About us </a> </li>
+							<li> <a href="#"> Companies </a> </li>
+							<li> <a href="#"> Candidates </a> </li>
+							<li> <a href="#"> Internships </a> </li>
+							<li> <a href="#"> Blogs </a> </li>
+							<li> <a href="#"> Testimonials </a> </li>
 						</ul>
-					</div>
-					<div class="col-lg-2  col-md-2 col-sm-4 col-xs-3">
-						<h3> PARTNERS </h3>
-						<ul>
-								<li> <a href="#"> Company Information </a> </li>
-								<li> <a href="#"> Privacy and Policy </a> </li>
-								<li> <a href="#"> Disclosure </a> </li>
-						</ul>
-					</div>
-					<div class="col-lg-2  col-md-2 col-sm-4 "></div>
-					<div class="col-lg-2  col-md-2 col-sm-4 "></div>
-					<div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
-						<h3> Subscribe </h3>
-						<ul>
-							<li>
-								<div class="input-append newsletter-box text-center">
-										<input type="text" class="full text-center" placeholder="Enter your e-mail ">
+			    </div>
+			    <div class="col">
+				    <h3> PARTNERS </h3>
+					<ul>
+						<li> <a href="#"> Company Information </a> </li>
+						<li> <a href="#"> Privacy and Policy </a> </li>
+						<li> <a href="#"> Disclosure </a> </li>
+					</ul>
+			    </div>
+			    <div class="col">
+					<h3> Subscribe </h3>
+					<ul>
+						<li>
+							<div class="input-append newsletter-box text-center">
+									<input type="text" class="full text-center" placeholder="Enter your e-mail ">
 
-								</div>
-							</li>
-						</ul>
-					</div>
-			</div>
+							</div>
+						</li>
+					</ul>
+					<h4 style="line-height: 58px;">@ COPYRIGHT THALESCODE 2016</h4>
+			    </div>
+			  </div>
 		</div>
 	</div>
 </body>
