Modified latest jobs for mobile

--- a/index.html
+++ b/index.html
@@ -32,10 +32,67 @@
 </head>
 <body id="page-top">
 	 <!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+
+	<!--  <div class="navbar navbar-expand-lg navbar-light fixed-top d-xl-none d-lg-block" id="mainNav">
 		<div class="container">
 			<a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: #333;"><span style="color: #17a2b8;">THALES</span>CODE</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" align="left">
+				Menu
+			<i class="fas fa-bars"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto pull-left">
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#home" style="color: #333;">HOME</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#training" style="color: #333;">TRAINING</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#testimonals" style="color: #333;">TESTIMONALS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#thalescode" style="color: #333;">THALESBLOG</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#contact" style="color: #333;">CONTACT</a>
+					</li>
+					</ul>
+			</div>
+		</div>
+	</div> -->
+	<nav class="my-auto d-xl-none d-lg-block">
+         <div class="container" style="font-family: Helvetica;">
+          <br>
+           <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" align="left">
+             <i class="fas fa-bars"></i>
+           </button>
+           <div class="collapse navbar-collapse" id="navbarResponsive">
+             	<ul class="navbar-nav ml-auto pull-left">
+              		<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#home" style="color: #333;">HOME</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#training" style="color: #333;">TRAINING</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#testimonals" style="color: #333;">TESTIMONALS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#thalescode" style="color: #333;">THALESBLOG</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#contact" style="color: #333;">CONTACT</a>
+					</li>
+               	</ul>
+           </div>
+         </div>
+     </nav>
+
+	<nav class="navbar navbar-expand-lg navbar-light fixed-top  my-auto d-none d-lg-block"" id="mainNav">
+		<div class="container">
+			<a class="navbar-brand js-scroll-trigger" href="#page-top" style="color: #333;"><span style="color: #17a2b8;">THALES</span>CODE</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" align="left">
 				Menu
 			<i class="fas fa-bars"></i>
 			</button>
@@ -56,7 +113,7 @@
 					<li class="nav-item">
 						<a class="nav-link js-scroll-trigger" href="#contact" style="color: #333;">CONTACT</a>
 					</li>
-					</ul>
+				</ul>
 			</div>
 		</div>
 	</nav>
@@ -64,18 +121,28 @@
 	<!-- header -->
 	<header class="masthead" id="home" style="color: #333 !important;">
 			<div class="container h-100">
+				<div class="row justify-content-between d-xl-none d-lg-block" style="margin-top: -30px;">
+				    <div class="col-6">
+				    </div>
+				    <div class="col-2" style="line-height: 30px;">
+				      	<i class="search icon"></i>
+				      	<i class="share icon"></i>
+				      	<i class="world icon"></i>
+				    </div>
+				</div><br>
 				<div class="row h-100">
 					<div class="col-lg-7 my-auto">
 						<div class="header-content mx-auto">
-							<h1 style="color: #333 !important">ThalesCode</h1>
+							<h1 style="color: #333 !important;margin-top: -110px !important;" >ThalesCode</h1>
 							<h1 class="mb-5  d-none d-lg-block">The best way to learn how to programming online</h1>
 							<h1 class="mb-5  d-xl-none d-lg-block" style="color: #333;">The best way to learn IT</h1>
 							<div class="row">
 								<div class="col-6"><a href="#" class="d-none d-xl-block btn  btn-xl js-scroll-trigger" style="background-color: #333 !important;color: #fff;">DEVELOPERS</a></div>
 								<div class="col-6"><a href="#" class="d-none d-xl-block btn  btn-xl js-scroll-trigger " style="background-color: #333 !important;color: #fff;">COMPANIES</a></div>
 							</div>
-							<p class="d-xl-none d-lg-block" style="text-align: left;color: #fff;margin-top: 74%;margin-left: 10%;">DEVELOPERS</p>
+							<p class="d-xl-none d-lg-block" style="text-align: left;color: #fff;margin-top:80%;margin-left: 10%;">DEVELOPERS</p>
 							<p class="d-xl-none d-lg-block" style="text-align: left;color: #fff;margin-top: 12%;margin-left: 25%;">COMPANIES</p>
+							
 						</div>
 						<div class ="d-none d-lg-block" style="background-color:#fff !important;color:#333;padding: 30px;margin-top: 50px;">
 							<p>A semantic element clearly describes its meaning to both the browser and the developer.A semantic element clearly describes its meaning to both the browser and the developer.A semantic element clearly describes its meaning to both the browser and the developer. </p>
@@ -119,9 +186,9 @@
 		</div>
 	</div>
 
-	<!-- Latest Jobs -->
+	
 	<section> 
-		<div class="container"><br>
+		<div class="container d-none d-lg-block"><br><!-- pc view for latest job-->
 			<h3 class="mb_header">JOB POST</h3>
 			<h1 id="latest-job"><strong>Latest Jobs</strong></h1>
 			<h6 id="job-post" >MOTIVO JOB POSTS</h6><br>
@@ -134,6 +201,7 @@
 					</button>
 				</div>
 			</div><br>
+			
 			<div class="card-deck">
 				<div class="card">
 					<div class="card-body">
@@ -171,7 +239,99 @@
 						<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,.</span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo</span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">-10/30</span>
 					</div>
 				</div>
-			</div>
+			</div> <!-- end for card -->
+
+		</div>
+
+		<!-- mobile view for latest job -->
+		<div class="container d-xl-none d-lg-block"><br><!-- pc view for latest job-->
+			<h3 class="mb_header">JOB POST</h3>
+			<h1 id="latest-job"><strong>Latest Jobs</strong></h1>
+			<h6 id="job-post" >MOTIVO JOB POSTS</h6><br>
+			<div class="row justify-content-between">
+				<div class=	col-sm-8"></div>
+				<div class="col-sm-2 col-xs-6 col-xs-offset-2">
+					<button class="ui basic button">
+						Find More
+						<i class="angle double right icon"></i>
+					</button>
+				</div>
+			</div><br>
+			<div id="demo" class="carousel slide d-xl-none d-lg-block" data-ride="carousel">
+				<!-- Indicators -->
+				<ul class="carousel-indicators">
+					<li data-target="#demo" data-slide-to="0" class="active"></li>
+					<li data-target="#demo" data-slide-to="1"></li>
+					<li data-target="#demo" data-slide-to="2"></li>
+					<li data-target="#demo" data-slide-to="3"></li>
+					<li data-target="#demo" data-slide-to="4"></li>
+				</ul>
+
+				<!-- The slideshow -->
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+					  	<div class="card">
+					  		<div class="card-body" style="text-align: center;">
+					  			<h3 class="card-title">FullStack Developer</h3></strong>
+					  			<h6>6.000.000 - 8.000.000万円</h6>
+					  			<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. </p>
+								<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+								<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,. </span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo </span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;"> -10/30</span><br><br>
+					  		</div>
+					  	</div>	
+					</div>
+					<div class="carousel-item">
+					  	<div class="card">
+					  		<div class="card-body" style="text-align: center;">
+					  			<h3 class="card-title">Worepress Developer</h3></strong>
+					  			<h6>6.000.000 - 8.000.000万円</h6>
+					  			<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. </p>
+								<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+								<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,. </span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo </span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;"> -10/30</span><br><br>
+					  		</div>
+					  	</div>	
+					</div>
+					<div class="carousel-item">
+					  	<div class="card">
+					  		<div class="card-body" style="text-align: center;">
+					  			<h3 class="card-title">Cakephp Developer</h3></strong>
+					  			<h6>6.000.000 - 8.000.000万円</h6>
+					  			<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.  </p>
+								<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+								<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,. </span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo </span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;"> -10/30</span><br><br>
+					  		</div>
+					  	</div>	
+					</div>
+					<div class="carousel-item">
+					  	<div class="card">
+					  		<div class="card-body" style="text-align: center;">
+					  			<h3 class="card-title">PHP Developer</h3></strong>
+					  			<h6>6.000.000 - 8.000.000万円</h6>
+					  			<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.  </p>
+								<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+								<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,. </span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo </span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;"> -10/30</span><br><br>
+					  		</div>
+					  	</div>	
+					</div>
+					<div class="carousel-item">
+					  	<div class="card">
+					  		<div class="card-body" style="text-align: center;">
+					  			<h3 class="card-title">Java Developer</h3></strong>
+					  			<h6>6.000.000 - 8.000.000万円</h6>
+					  			<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. </p>
+								<p class="card-text"><span class="badge badge-pill badge-info">PHP</span>  <span class="badge badge-pill badge-info">Laravel</span>   <span class="badge badge-pill badge-info">AWS</span></p>
+								<img src="img/company_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Motivo inc,. </span><img src="img/location_icon.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;">Shibafu,Tokyo </span><img src="img/watch_logo.png" style="width: 20px;height: 20px;"><span style="font-size: 12px;"> -10/30</span><br><br>
+					  		</div>
+					  	</div>	
+					</div>
+				</div>
+				<!-- Left and right controls -->
+				<a class="carousel-control-prev" href="#demo" data-slide="prev">
+				<span class="carousel-control-prev-icon"></span>
+				</a>
+				<a class="carousel-control-next" href="#demo" data-slide="next">
+				<span class="carousel-control-next-icon"></span>
+				</a>
 		</div>
 	</section>
 
